force-app/main/default/objects/acheck__CheckListItem__c/acheck__CheckListItem__c.object-meta.xml
<CustomObject>
    <customHelpPage>acheck__ChecklistItem_Support</customHelpPage>
    <description>Checklist item required, done or reminded of - the Template for the Task</description>
    <label>Checklist Item</label>
    <nameField>
        <label>Check Item Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Checklist Items</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>