force-app/main/default/objects/acheck__CheckListItem__c/fields/acheck__ActivityTime__c.field-meta.xml
<CustomField>
    <fullName>acheck__ActivityTime__c</fullName>
    <description>Activity Time</description>
    <inlineHelpText>Activity Time</inlineHelpText>
    <label>Due Time</label>
    <type>Time</type>
</CustomField>