force-app/main/default/objects/acheck__CheckListItem__c/fields/acheck__CheckList__c.field-meta.xml
<CustomField>
    <fullName>acheck__CheckList__c</fullName>
    <description>Parent</description>
    <inlineHelpText>Parent</inlineHelpText>
    <label>CheckList</label>
    <referenceTo>acheck__CheckList__c</referenceTo>
    <relationshipLabel>Checklist Items</relationshipLabel>
    <relationshipName>CheckListItems</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>