force-app/main/default/objects/acheck__CheckListItem__c/fields/acheck__Code__c.field-meta.xml
<CustomField>
    <fullName>acheck__Code__c</fullName>
    <description>Optional Code, e.g used for sorting</description>
    <inlineHelpText>Optional Code, e.g used for sorting</inlineHelpText>
    <label>Code</label>
    <length>255</length>
    <type>Text</type>
</CustomField>