force-app/main/default/objects/acheck__CheckListItem__c/fields/acheck__CopyToTask__c.field-meta.xml
<CustomField>
    <fullName>acheck__CopyToTask__c</fullName>
    <description>Fields to copy to task for this item/task only, semicolon-separated list TaskField=MyObject.MyField;
e.g., WhoId=Case.ContactId
The object reference must match the Only For Object.</description>
    <inlineHelpText>Fields to copy to task for this item/task only, semicolon-separated list TaskField=MyObject.MyField;
e.g., WhoId=Case.ContactId
The object reference must match the Only For Object.</inlineHelpText>
    <label>Copy to Task</label>
    <length>255</length>
    <type>Text</type>
</CustomField>