force-app/main/default/objects/acheck__CheckListItem__c/fields/acheck__DateOffsetDays__c.field-meta.xml
<CustomField>
    <fullName>acheck__DateOffsetDays__c</fullName>
    <defaultValue>1</defaultValue>
    <description>Due Date offset in days (empty=no Due Date) from creating the checklist (Duration)
- If there is a Prerequisite task, it is days after we completed the prerequisite task.
- enter a negative value to calculate relative to a future target date</description>
    <inlineHelpText>Due Date offset in days (empty=no Due Date) from creating the checklist (Duration)
- If there is a Prerequisite task, it is days after we completed the prerequisite task.
- enter a negative value to calculate relative to a future target date</inlineHelpText>
    <label>Date Offset Days</label>
    <precision>5</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>