force-app/main/default/objects/acheck__CheckListItem__c/fields/acheck__Description__c.field-meta.xml
<CustomField>
    <fullName>acheck__Description__c</fullName>
    <description>Comment Template for the new Task or Event, you can use variables</description>
    <inlineHelpText>Comment Template for the new Task or Event, you can use variables</inlineHelpText>
    <label>Comment</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>