force-app/main/default/objects/acheck__CheckListItem__c/fields/acheck__FlowName_Completed__c.field-meta.xml
<CustomField>
    <fullName>acheck__FlowName_Completed__c</fullName>
    <description>AutoLaunched Flow name to be started when the task is completed. The flow can e.g. use a custom field on the task record to update other records.</description>
    <inlineHelpText>AutoLaunched Flow name to be started when the task is completed. The flow can e.g. use a custom field on the task record to update other records.</inlineHelpText>
    <label>Flow Name Completed</label>
    <length>60</length>
    <type>Text</type>
</CustomField>