force-app/main/default/objects/acheck__CheckListItem__c/fields/acheck__FlowName_Start__c.field-meta.xml
<CustomField>
    <fullName>acheck__FlowName_Start__c</fullName>
    <description>AutoLaunched Flow name to be started when the task is started (Status: In Progress). Note that this is not reliable 
as a user may directly close a task.</description>
    <inlineHelpText>AutoLaunched Flow name to be started when the task is started (Status: In Progress). Note that this is not reliable 
as a user may directly close a task.</inlineHelpText>
    <label>Flow Name Start</label>
    <length>60</length>
    <type>Text</type>
</CustomField>