force-app/main/default/objects/acheck__CheckListItem__c/fields/acheck__InlineEdit__c.field-meta.xml
<CustomField>
    <fullName>acheck__InlineEdit__c</fullName>
    <description>What inline edits are displayed:
        - empty (default): setting from Checklist (all, task, record, none)
        - all: any fields defined in FieldSet (ChecklistInlineEdit) on Task or Record
        - task: show only Task fieldsets
        - record: show only record fieldsets
        - none: no inline edit for Tasks of this Item
        - comma-separated list of fields to show, e.g. Task.Priority, Upload()</description>
    <inlineHelpText>What inline edits are displayed:
        - empty (default): setting from Checklist (all, task, record, none)
        - all: any fields defined in FieldSet (ChecklistInlineEdit) on Task or Record
        - task: show only Task fieldsets
        - record: show only record fieldsets
        - none: no inline edit for Tasks of this Item
        - comma-separated list of fields to show, e.g. Task.Priority, Upload()</inlineHelpText>
    <label>Inline Edit</label>
    <length>255</length>
    <type>Text</type>
</CustomField>