force-app/main/default/objects/acheck__CheckListItem__c/fields/acheck__IsActive__c.field-meta.xml
<CustomField>
    <fullName>acheck__IsActive__c</fullName>
    <defaultValue>true</defaultValue>
    <description>CheckList Item is active (= task created)</description>
    <inlineHelpText>CheckList Item is active (= task created)</inlineHelpText>
    <label>Active</label>
    <type>Checkbox</type>
</CustomField>