force-app/main/default/objects/acheck__CheckListItem__c/fields/acheck__IsDependentsAllComplete__c.field-meta.xml
<CustomField>
    <fullName>acheck__IsDependentsAllComplete__c</fullName>
    <defaultValue>true</defaultValue>
    <description>If selected, to start the task, ALL prior Tasks need to be completed (the tasks/Items this item/task depends).
Otherwise, if ANY of the previous Tasks is completed, this Item/Task Status is set from Waiting to Not Started.</description>
    <inlineHelpText>If selected, to start the task, ALL prior Tasks need to be completed (the tasks/Items this item/task depends).
Otherwise, if ANY of the previous Tasks is completed, this Item/Task Status is set from Waiting to Not Started.</inlineHelpText>
    <label>All Complete</label>
    <type>Checkbox</type>
</CustomField>