force-app/main/default/objects/acheck__CheckListItem__c/fields/acheck__IsRequired__c.field-meta.xml
<CustomField>
    <fullName>acheck__IsRequired__c</fullName>
    <defaultValue>false</defaultValue>
    <description>The Task is required - i.e. the user cannot choose not to create it</description>
    <inlineHelpText>The Task is required - i.e. the user cannot choose not to create it</inlineHelpText>
    <label>Required</label>
    <type>Checkbox</type>
</CustomField>