force-app/main/default/objects/acheck__CheckListItem__c/fields/acheck__IsWorkdays__c.field-meta.xml
<CustomField>
    <fullName>acheck__IsWorkdays__c</fullName>
    <defaultValue>true</defaultValue>
    <description>If selected, skip Weekends and Holidays - e.g. Friday + 2 days = Tuesday (instead of Sunday).
Define Holidays as All Day (recurring currently not supported).</description>
    <inlineHelpText>If selected, skip Weekends and Holidays - e.g. Friday + 2 days = Tuesday (instead of Sunday).
Define Holidays as All Day (recurring currently not supported).</inlineHelpText>
    <label>Use Workdays</label>
    <type>Checkbox</type>
</CustomField>