force-app/main/default/objects/acheck__CheckListItem__c/fields/acheck__OnlyIfValid__c.field-meta.xml
<CustomField>
    <fullName>acheck__OnlyIfValid__c</fullName>
    <description>Create a task for this item only if the expression is valid (basically where clause) - requires Only For Object
- example for Account: Rating = &apos;Warm&apos;</description>
    <inlineHelpText>Create a task for this item only if the expression is valid (basically where clause) - requires Only For Object
- example for Account: Rating = &apos;Warm&apos;</inlineHelpText>
    <label>Only If Valid</label>
    <length>255</length>
    <type>Text</type>
</CustomField>