force-app/main/default/objects/acheck__CheckListItem__c/fields/acheck__PrerequisiteIdList__c.field-meta.xml
<CustomField>
    <fullName>acheck__PrerequisiteIdList__c</fullName>
    <description>Internal list of prerequisite item Ids</description>
    <inlineHelpText>Internal list of prerequisite item Ids</inlineHelpText>
    <label>Prerequisite Id List</label>
    <length>255</length>
    <type>Text</type>
</CustomField>