force-app/main/default/objects/acheck__CheckListItem__c/fields/acheck__Priority__c.field-meta.xml
<CustomField>
    <fullName>acheck__Priority__c</fullName>
    <description>Task Priority (default Normal) - validity checked when entered</description>
    <inlineHelpText>Task Priority (default Normal) - validity checked when entered</inlineHelpText>
    <label>Priority</label>
    <length>40</length>
    <type>Text</type>
</CustomField>