force-app/main/default/objects/acheck__CheckListItem__c/fields/acheck__Queue__c.field-meta.xml
<CustomField>
    <fullName>acheck__Queue__c</fullName>
    <description>Optional default Assigned To Queue Name 
- needs to be in Custom Metadata - Checklist Settings</description>
    <inlineHelpText>Optional default Assigned To Queue Name 
- needs to be in Custom Metadata - Checklist Settings</inlineHelpText>
    <label>Assigned Queue</label>
    <length>30</length>
    <type>Text</type>
</CustomField>