force-app/main/default/objects/acheck__CheckListItem__c/fields/acheck__RecordType__c.field-meta.xml
<CustomField>
    <fullName>acheck__RecordType__c</fullName>
    <description>Record Type of the Task record to be created (if used, empty for default) - validity checked when entered</description>
    <inlineHelpText>Record Type of the Task record to be created (if used, empty for default) - validity checked when entered</inlineHelpText>
    <label>Record Type</label>
    <length>60</length>
    <type>Text</type>
</CustomField>