force-app/main/default/objects/acheck__CheckListItem__c/fields/acheck__Subject__c.field-meta.xml
<CustomField>
    <fullName>acheck__Subject__c</fullName>
    <description>Subject Template for the new Task or Event - you can reference target record values e.g. {!Name}</description>
    <inlineHelpText>Subject Template for the new Task or Event - you can reference target record values e.g. {!Name}</inlineHelpText>
    <label>Subject</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>