force-app/main/default/objects/acheck__CheckListItem__c/fields/acheck__TargetDate_Dynamic__c.field-meta.xml
<CustomField>
    <fullName>acheck__TargetDate_Dynamic__c</fullName>
    <description>Optional reference in the base record to calculate the Task Due Date for this item only,
e.g. CloseDate or Meeting_Date__c. It needs to be a date or date time field and overwrites the Checklist Target Date. 
Once calculated, it is not updated automatically.</description>
    <inlineHelpText>Optional reference in the base record to calculate the Task Due Date for this item only,
e.g. CloseDate or Meeting_Date__c. It needs to be a date or date time field and overwrites the Checklist Target Date. 
Once calculated, it is not updated automatically.</inlineHelpText>
    <label>Dynamic Target Date</label>
    <length>255</length>
    <type>Text</type>
</CustomField>