force-app/main/default/objects/acheck__CheckListItem__c/fields/acheck__Type__c.field-meta.xml
<CustomField>
    <fullName>acheck__Type__c</fullName>
    <description>Task Type - validity checked when entered</description>
    <inlineHelpText>Task Type (e.g. Call, Meeting, Email, Other, ...) - validity checked when entered</inlineHelpText>
    <label>Type</label>
    <length>40</length>
    <type>Text</type>
</CustomField>