force-app/main/default/objects/acheck__CheckListItem__c/fields/acheck__User__c.field-meta.xml
<CustomField>
    <fullName>acheck__User__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Optional default Assigned To User</description>
    <inlineHelpText>Optional default Assigned To User</inlineHelpText>
    <label>Assigned User</label>
    <referenceTo>User</referenceTo>
    <relationshipName>CheckPoints</relationshipName>
    <type>Lookup</type>
</CustomField>