force-app/main/default/objects/acheck__CheckListItem__c/fields/acheck__User_Dynamic__c.field-meta.xml
<CustomField>
    <fullName>acheck__User_Dynamic__c</fullName>
    <description>Reference in the base record to find user assign the task to, 
e.g. OwnerId - or a lookup to the user (e.g. myField__c, accorto__Resource__r.accorto__User__c)
or use &quot;CurrentUser&quot;</description>
    <inlineHelpText>Reference in the base record to find user assign the task to, 
e.g. OwnerId - or a lookup to the user (e.g. myField__c, accorto__Resource__r.accorto__User__c)
or use &quot;CurrentUser&quot;</inlineHelpText>
    <label>Dynamically Assigned User</label>
    <length>255</length>
    <type>Text</type>
</CustomField>